# sql_tools

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
src/: errors.rs  lib.rs  utils.rs
src/alter/: implement.rs  mod.rs
src/alter/oracle_sql/: mod.rs
src/clauses/: mod.rs
src/clauses/alter/: implement.rs  mod.rs
src/clauses/create/: implement.rs  mod.rs
src/clauses/delete/: implement.rs  mod.rs
src/clauses/insert/: implement.rs  mod.rs
src/clauses/insert/data_conversion/: date.rs  datetime.rs  dt_regex.rs  mod.rs
src/clauses/select/: group_by.rs  implement.rs  mod.rs
src/clauses/update/: implement.rs  mod.rs
src/clauses/where_clause/: delete.rs  mod.rs  select.rs  update.rs
src/create/: implement.rs  mod.rs
src/create/oracle_sql/: mod.rs
src/create/sqlite/: mod.rs
src/data_types/: fromsql.rs  implement.rs  mod.rs  oracle.rs  sqlite.rs
src/insert/: implement.rs  mod.rs
src/insert/oracle_sql/: iter_grid.rs  mod.rs  mutate_grid.rs  sql_fmt.rs  validation.rs
src/insert/sqlite/: mod.rs
src/oracle_sql/: mod.rs
src/query_conjunctions/: implement.rs  mod.rs  utils.rs
src/select/: clause_builder.rs  group_by.rs  implement.rs  mod.rs  utils.rs
src/select/oracle_sql/: mod.rs  utils.rs
src/select/sqlite/: mod.rs
src/sql_implementations/: initialization.rs  mod.rs  utils.rs
src/sql_implementations/oracle/: mod.rs
src/sql_implementations/sqlite/: mod.rs
src/sql_types/: mod.rs
src/sql_variations/: mod.rs  oracle_sql.rs  sqlite.rs
src/sql_variations/oracle/: mod.rs
src/sql_variations/sqlite/: mod.rs
src/statements/: mod.rs
src/statements/alter/: implement.rs  mod.rs
src/statements/create/: implement.rs  mod.rs
src/statements/create/sql_implementations/: mod.rs  utils.rs
src/statements/delete/: implement.rs  mod.rs
src/statements/insert/: implement.rs  mod.rs
src/statements/insert/data_conversion/: date.rs  datetime.rs  dt_regex.rs  mod.rs
src/statements/insert/sql_implementations/: mod.rs
src/statements/query_conjunctions/: implement.rs  utils.rs
src/statements/select/: group_by.rs  implement.rs  mod.rs
src/statements/select/implementations/: mod.rs
src/statements/select/sql_implementations/: mod.rs  multithread.rs  mutate_query.rs
src/statements/update/: implement.rs  mod.rs
src/statements/update/sql_implementations/: mod.rs
src/statements/where_clause/: delete.rs  mod.rs  select.rs  update.rs  utils.rs
src/update/: implement.rs  mod.rs
src/update/oracle_sql/: mod.rs
src/update/sqlite/: mod.rs
src/variations/: mod.rs  utils.rs
src/variations/oracle/: mod.rs
src/variations/oracle/alter/: mod.rs
src/variations/sqlite/: mod.rs
src/where_clause/: mod.rs  select.rs  update.rs  utils.rs
(+39 files in other folders)
