[package]
name = "sql_tools"
version = "0.1.5"
edition = "2021"
license = "MIT"
description = "A crate that aims to make creating simple SQL queries easy."
readme = "README.md"
repository = "https://github.com/Cosiamo/sql_tools"
keywords = ["sql", "oracle", "database", "concurrency", "parallelism"]
categories = ["concurrency", "database", "database-implementations", "data-structures", "encoding"]
exclude = ["TODO.md", ".vscode/*", ".gitignore"]

[dependencies]
oracle = { version = "0.6.3", features = ["chrono"]}
chrono = "0.4.39"
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1.0.58"
num_cpus = "1.0"
proc-macro2 = "1.0.79"
indicatif = "0.17.6"
csv = "1.3.0"
csv_perusal = "0.8.2"
rusqlite = { version = "0.32.0", features = ["bundled"] }