[package]
name = "sql_tools"
version = "0.4.0"
edition = "2024"
license = "MIT"
description = "A crate that aims to make creating simple SQL queries easy."
readme = "README.md"
repository = "https://github.com/Cosiamo/sql_tools"
keywords = ["sql", "oracle", "database", "concurrency", "parallelism"]
categories = ["concurrency", "database", "database-implementations", "data-structures", "encoding"]
exclude = ["TODO.md", ".vscode/*", ".gitignore"]

[dependencies]
oracle = { version = "0.6.3", features = ["chrono"]}
chrono = {version = "0.4.40", features = ["serde"]}
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.12.1"
thiserror = "1.0.58"
num_cpus = "1.0"
proc-macro2 = "1.0.79"
indicatif = "0.17.6"
rusqlite = { version = "0.32.0", features = ["bundled"] }
regex = "1.9.6"
memchr = { version = "2", default-features = false }
once_cell = "1.18.0"