[package]
name = "sql_tools"
version = "0.11.4"
edition = "2024"
license = "MIT"
description = "A rust crate meant to make SQL queries simple and communication between various SQL versions easy."
readme = "README.md"
repository = "https://github.com/Cosiamo/sql_tools"
keywords = ["sql", "oracle", "database", "concurrency", "parallelism"]
categories = ["concurrency", "database", "database-implementations", "data-structures", "encoding"]
exclude = ["TODO.md", ".vscode/*", ".gitignore"]

[dependencies]
oracle = { version = "0.6.3", features = ["chrono"]}
chrono = {version = "0.4.41", features = ["serde"]}
serde = { version = "1.0.197", features = ["derive"] }
itertools = "0.14.0"
thiserror = "2.0.12"
num_cpus = "1.17.0"
proc-macro2 = "1.0.95"
indicatif = "0.18.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
regex = "1.9.6"
memchr = { version = "2.7.5", default-features = false }
once_cell = "1.21.3"
rand = "0.9.2"
